# goit-pythonweb-hw-08

./: .env.test  .gitignore  README.md  init_db.py  pyproject.toml  setup.py  setup_db.py
app/: __init__.py  main.py
app/api/: __init__.py  auth.py  contacts.py
app/core/: __init__.py  auth.py  cache.py  cloudinary.py  config.py  database.py  email.py  security.py
app/models/: __init__.py  contact.py  user.py
app/schemas/: __init__.py  auth.py  contact.py
app/templates/: email_verification.html  password_reset.html
docs/source/: conf.py  index.rst
docs/source/modules/: auth.rst  contacts.rst  models.rst  schemas.rst
migrations/versions/: add_user_roles.py
tests/: conftest.py  db_init.py
tests/integration/: test_auth.py  test_contacts.py
tests/unit/: test_auth.py  test_auth_utils.py  test_cloudinary.py  test_config.py
